--- a/NuGet/Package.Forms.nuspec
+++ b/NuGet/Package.Forms.nuspec
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>Microcharts.Forms</id>
+    <id>Microcharts.Forms-OSI</id>
     <version>$version$</version>
-    <title>Microcharts for Xamarin.Forms</title>
-    <authors>Aloïs Deniel</authors>
+    <title>Microcharts for Xamarin.Forms, extended by OSI</title>
+    <authors>Object Systems International</authors>
     <owners>Aloïs Deniel</owners>
-    <licenseUrl>https://github.com/aloisdeniel/Microcharts/blob/master/LICENSE</licenseUrl>
-    <projectUrl>https://github.com/aloisdeniel/Microcharts/</projectUrl>
+    <licenseUrl>https://github.com/osi-open-source/Microcharts/blob/master/LICENSE</licenseUrl>
+    <projectUrl>https://github.com/osi-open-source/Microcharts</projectUrl>
     <iconUrl>https://raw.githubusercontent.com/aloisdeniel/Microcharts/master/Documentation/Logo.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Create cross-platforms (Xamarin, Windows, ...) simple charts.</description>
