--- a/Sources/Microcharts/Microcharts.csproj
+++ b/Sources/Microcharts/Microcharts.csproj
@@ -3,20 +3,21 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard1.3;portable-net45+win8+wpa81+wp8</TargetFrameworks>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-    <Version>0.8.4.2-pre</Version>
-    <AssemblyVersion>0.8.4.2</AssemblyVersion>
-    <FileVersion>0.8.4.2</FileVersion>
-    <PackageProjectUrl>https://github.com/aloisdeniel/Microcharts/</PackageProjectUrl>
+    <Version>1.0.0</Version>
+    <AssemblyVersion>1.0.0</AssemblyVersion>
+    <FileVersion>1.0.0</FileVersion>
+    <PackageProjectUrl>https://github.com/osi-open-source/Microcharts</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/aloisdeniel/Microcharts/blob/master/LICENSE</PackageLicenseUrl>
-    <RepositoryUrl>https://github.com/aloisdeniel/Microcharts/</RepositoryUrl>
+    <RepositoryUrl>https://github.com/osi-open-source/Microcharts</RepositoryUrl>
     <RepositoryType>GitHub</RepositoryType>
-    <Description>Microcharts is an extremely simple charting library for a wide range of platforms (see Compatibility section below), with shared code and rendering for all of them!</Description>
+    <Description>Microcharts is an extremely simple charting library for a wide range of platforms (see Compatibility section below), with shared code and rendering for all of them! Extended by OSI with additional functionality.</Description>
     <Authors>Aloïs Deniel, Joseph Nixon</Authors>
     <PackageTags>xamarin ios android chart skia</PackageTags>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <Company>Aloïs Deniel, Joseph Nixon</Company>
+    <Company>OSI</Company>
     <Copyright>Copyright 2017</Copyright>
     <PackageIconUrl>https://raw.githubusercontent.com/aloisdeniel/Microcharts/master/Documentation/Logo.png</PackageIconUrl>
+    <Product>Microcharts.OSI</Product>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)'=='portable-net45+win8+wpa81+wp8'">
